--- a/src/pages/page4/page4.scss
+++ b/src/pages/page4/page4.scss
@@ -1,8 +1,9 @@
 page-page4 {
   ion-content.content {
     content: "";
-    background: url("http://worldwidewallpapers.com/wp-content/uploads/2018/01/Engagement-Love-Couple-Lovers-626x425.jpg")
+    background: url("https://breakupwallpapers.com/wp-content/uploads/2018/12/Love-Proposal-Boy-To-Girl-Wallpaper-Love-Wallpapers-In-HD-4K-Quality-1024x683.jpg")
       no-repeat center;
+      opacity: .8;
     background-size: cover;
     position: absolute;
     top: 0;
