--- a/src/pages/page5/page5.scss
+++ b/src/pages/page5/page5.scss
@@ -1,3 +1,30 @@
 page-page5 {
-
+  ion-content.content {
+    content: "";
+    background: url("../../assets/images/51.JPG") no-repeat center;
+    background-size: cover;
+    // position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    // opacity: .8;
+  }
+  .image {
+    width: 80%;
+    left: 0;
+    text-align: center;
+    height: 80%;
+    margin: auto;
+    border: 5px solid #fdab9f;
+    opacity: 1;
+  }
+  .msg-container{
+    background-color: rgba(26, 24, 24, 0.76);
+    opacity: .8;
+  }
+  h5{
+    color: #ffffff;
+    font-weight: bold;
+  }
 }
