--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,10 +3,10 @@ page-home {
     // position: relative;
 
         content: '';
-        background: url('http://pictures.4ever.eu/data/download/love/couples/couple,-sunset-over-the-sea,-open-sea,-wooden-stairs-256367.jpg?no-logo') no-repeat center;
+        background: url('../../assets/imgs/bg.jpeg') no-repeat center;
         background-size: cover;
         position: absolute;
-        top: 0;
+        top: 20;
         left: 0;
         width: 100%;
         height: 100%;
@@ -30,16 +30,18 @@ page-home {
     }
 
     .image {
-      width: 80%;
+
+      width: 90%;
       left: 0;
       text-align: center;
-      height: 80%;
+      height: 60%;
       margin: auto;
-      border: 3px solid green;
+      border: 5px solid #fdab9f;
+      opacity: 1;
     }
 
     .row2{
-      margin-top: 25vh;
+      margin-top: 10vh;
     }
 
 }
