--- a/src/pages/page2/page2.scss
+++ b/src/pages/page2/page2.scss
@@ -3,7 +3,7 @@ page-page2 {
     // position: relative;
 
         content: '';
-        background: url('https://resize.indiatvnews.com/en/resize/newbucket/715_-/2018/02/propose-1517999844.jpg') no-repeat center;
+        background: url('../../assets/imgs/bg2.jpg') no-repeat center;
         background-size: cover;
         position: absolute;
         top: 0;
