--- a/src/pages/page4/page4.scss
+++ b/src/pages/page4/page4.scss
@@ -1,7 +1,7 @@
 page-page4 {
   ion-content.content {
     content: "";
-    background: url("https://breakupwallpapers.com/wp-content/uploads/2018/12/Love-Proposal-Boy-To-Girl-Wallpaper-Love-Wallpapers-In-HD-4K-Quality-1024x683.jpg")
+    background: url("../../assets/imgs/bg4.jpg")
       no-repeat center;
       opacity: .8;
     background-size: cover;
