--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -31,7 +31,7 @@ page-home {
 
     .image {
 
-      width: 90%;
+      width: 50%;
       left: 0;
       text-align: center;
       height: 60%;
@@ -40,8 +40,27 @@ page-home {
       opacity: 1;
     }
 
+    .image2 {
+
+      width: auto ;
+      // max-height: 40vh;
+      max-height: 30vh;
+      // min-height: 40vh;
+      background-size: cover;
+      left: 0;
+      text-align: center;
+      // height: 40vh;
+      margin: auto;
+      border: 2px solid #fdab9f;
+      opacity: 1;
+    }
+
     .row2{
-      margin-top: 10vh;
+      margin-top: 5px;
+    }
+
+    ion-slides{
+      margin-top: 3vh;
     }
 
 }
