--- a/src/pages/page3/page3.scss
+++ b/src/pages/page3/page3.scss
@@ -1,7 +1,7 @@
 page-page3 {
   ion-content.content {
     content: "";
-    background: url("http://worldwidewallpapers.com/wp-content/uploads/2018/01/Engagement-Love-Couple-Lovers-626x425.jpg")
+    background: url("../../assets/imgs/bg3.jpg")
       no-repeat center;
     background-size: cover;
     position: absolute;
