--- a/src/pages/page4/page4.scss
+++ b/src/pages/page4/page4.scss
@@ -15,7 +15,7 @@ page-page4 {
     width: 80%;
     left: 0;
     text-align: center;
-    height: 80%;
+    height: 60vh;
     margin: auto;
     border: 5px solid #fdab9f;
     opacity: 1
