--- a/src/pages/page3/page3.scss
+++ b/src/pages/page3/page3.scss
@@ -14,7 +14,7 @@ page-page3 {
     width: 80%;
     left: 0;
     text-align: center;
-    height: 80%;
+    height: 80vh;
     margin: auto;
     border: 5px solid #fdab9f;
     opacity: 1
