--- a/src/pages/page6/page6.scss
+++ b/src/pages/page6/page6.scss
@@ -1,3 +1,32 @@
 page-page6 {
+  ion-content.content {
+    content: "";
+    background: url("https://i.pinimg.com/originals/c9/d1/5b/c9d15bd78e21f2ff4da3086e6a2cc552.jpg") no-repeat center;
+    background-size: cover;
+    // position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .9;
+  }
+  .image {
+    width: 80%;
+    left: 0;
+    text-align: center;
+    height: 80%;
+    margin: auto;
+    border: 5px solid #fdab9f;
+    opacity: 1;
+    transform: rotateY(90deg)
 
+  }
+  .msg-container{
+    background-color: rgba(26, 24, 24, 0.76);
+    opacity: .8;
+  }
+  h5{
+    color: #ffffff;
+    font-weight: bold;
+  }
 }
