--- a/src/pages/page7/page7.scss
+++ b/src/pages/page7/page7.scss
@@ -1,3 +1,42 @@
 page-page7 {
+  ion-content.content {
+    content: "";
+    background: url("http://nirwanabali.com/wp-content/uploads/2017/12/couple.png") no-repeat center;
+    background-size: cover;
+    // position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+  }
+  .image {
+    width: 80%;
+    left: 0;
+    text-align: center;
+    height: 80%;
+    margin: auto;
+    border: 5px solid #fdab9f;
+    opacity: 1;
+    transform: rotateX(360deg)
 
+  }
+  .msg-container{
+    background-color: rgba(26, 24, 24, 0.76);
+    opacity: .8;
+  }
+  h1{
+    color: #ffffff;
+    font-family: cursive;
+    font-weight: bold;
+    font-size: 30pt;
+  }
+
+  .bottom{
+    margin-top: 34vh;
+  }
+  label{
+    color: azure;
+    font-weight: bold
+  }
 }
