--- a/src/pages/page6/page6.scss
+++ b/src/pages/page6/page6.scss
@@ -1,7 +1,7 @@
 page-page6 {
   ion-content.content {
     content: "";
-    background: url("https://i.pinimg.com/originals/c9/d1/5b/c9d15bd78e21f2ff4da3086e6a2cc552.jpg") no-repeat center;
+    background: url("../../assets/imgs/couple.jpg") no-repeat center;
     background-size: cover;
     // position: absolute;
     top: 0;
