--- a/src/pages/page7/page7.scss
+++ b/src/pages/page7/page7.scss
@@ -1,7 +1,7 @@
 page-page7 {
   ion-content.content {
     content: "";
-    background: url("http://nirwanabali.com/wp-content/uploads/2017/12/couple.png") no-repeat center;
+    background: url("../../assets/imgs/bgcouple.png") no-repeat center;
     background-size: cover;
     // position: absolute;
     top: 0;
